[tool.poetry]
name = "chase"
version = "0.1.0"
description = ""
authors = ["Vladimir Pasquier <1112241+vpasquier@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.25"
hvplot = "^0.10.0"
pyarrow = "^16.0.0"
pyparsing = "^3.1.2"
pre-commit = "^3.7.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
